# esp32-airplay-colormusic

./: .gitignore  CMakeLists.txt  README.md
components/alac/: CMakeLists.txt
components/alac/include/: alac_wrapper.h
components/alac/src/: EndianPortable.c  alac_wrapper.cpp
components/fastled/: CMakeLists.txt  FastLED.cpp
components/fastled/include/: FastLED.h
components/raop/: CMakeLists.txt  log_util.c  raop.c  raop_sink.h  rtp.c  util.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  idf_component.yml
